<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_completed"
    android:orientation="vertical"
    android:padding="@dimen/custom_dim_margin">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_congtrat"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/txt_large" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="@dimen/custom_dim_btn_padding_right_left"
        android:gravity="center_horizontal"
        android:text="@string/app_lvl_done"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/txt_medium_xs" />

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="@dimen/custom_dim_btn_padding_top_btn"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/txt_small"
        android:textStyle="bold"
        tools:text="39% efficiency" />

    <TextView
        android:id="@+id/txt_btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn"
        android:paddingStart="@dimen/custom_dim_btn_padding_right_left"
        android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
        android:paddingEnd="@dimen/custom_dim_btn_padding_right_left"
        android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
        android:text="@string/app_next_lvl"
        android:textColor="#ffffff"
        android:textSize="@dimen/txt_medium_xs" />

</RelativeLayout>