<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="view.activity.GameActivity">

    <RelativeLayout
        android:id="@+id/zone_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/custom_dim_btn_padding_right_left"
            android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingEnd="@dimen/custom_dim_btn_padding_right_left"
            android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_back"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/txt_large"
            android:layout_centerVertical="true"
            android:text="5x5"
            android:textColor="#ffffff"
            android:textSize="@dimen/txt_medium" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@+id/tv_type"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="Level 23"
            android:textColor="#80ffffff"
            android:textSize="@dimen/txt_medium" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingEnd="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
            android:src="@mipmap/ic_settings" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/zone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zone_1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/custom_dim_margin"
            android:singleLine="true"
            android:text="@string/app_moves"
            android:textColor="#ffffff"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/tv_moves"
            android:singleLine="true"
            android:text="@string/app_best"
            android:textColor="#ffffff"
            android:textSize="@dimen/txt_small" />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/tv_pipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/app_pipe"
                android:textColor="#ffffff"
                android:textSize="@dimen/txt_small" />

        </RelativeLayout>


    </RelativeLayout>


    <TableLayout
        android:id="@+id/table_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zone2"
        android:background="@drawable/cell_shape"
        android:padding="0dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/zone_ads"
        android:layout_below="@+id/table_game"
        android:paddingStart="@dimen/custom_dim_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/custom_dim_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/custom_dim_btn_padding_right_left"
            android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingEnd="@dimen/custom_dim_btn_padding_right_left"
            android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
            android:src="@mipmap/ic_prev" />

        <ImageButton
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/custom_dim_btn_padding_right_left"
            android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingEnd="@dimen/custom_dim_btn_padding_right_left"
            android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
            android:src="@mipmap/ic_refresh" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/custom_dim_btn_padding_right_left"
            android:paddingTop="@dimen/custom_dim_btn_padding_top_btn"
            android:paddingEnd="@dimen/custom_dim_btn_padding_right_left"
            android:paddingBottom="@dimen/custom_dim_btn_padding_top_btn"
            android:src="@mipmap/ic_next" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/zone_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/banner_placeholder" />

    </FrameLayout>

</RelativeLayout>